[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/scenes/components/button.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 3 )

[node name="Button" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="JudgementPerfect" type="Area2D" parent="."]

[node name="JudgementPerfectHitbox" type="CollisionShape2D" parent="JudgementPerfect"]
shape = SubResource( 2 )

[node name="JudgementGood" type="Area2D" parent="."]

[node name="JudgementGoodEarlyHitbox" type="CollisionShape2D" parent="JudgementGood"]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="JudgementGoodLateHitbox" type="CollisionShape2D" parent="JudgementGood"]
position = Vector2( 0, 32 )
shape = SubResource( 1 )

[node name="JudgementMissEarly" type="Area2D" parent="."]

[node name="JudgementMissEarlyHitbox" type="CollisionShape2D" parent="JudgementMissEarly"]
position = Vector2( 0, -60 )
shape = SubResource( 3 )

[node name="JudgementMissLate" type="Area2D" parent="."]

[node name="JudgementMissLateHitbox" type="CollisionShape2D" parent="JudgementMissLate"]
position = Vector2( 0, 51 )
shape = SubResource( 4 )

[connection signal="area_shape_entered" from="JudgementPerfect" to="." method="_on_JudgementPerfect_area_shape_entered"]
[connection signal="area_shape_entered" from="JudgementGood" to="." method="_on_JudgementGood_area_shape_entered"]
[connection signal="area_shape_entered" from="JudgementMissEarly" to="." method="_on_JudgementMissEarly_area_shape_entered"]
[connection signal="area_shape_entered" from="JudgementMissLate" to="." method="_on_JudgementMissLate_area_shape_entered"]
